name:           llog
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       life/line-logger: simple logging of things you do or anything
build-type:     Simple
build-depends:  base, directory, filepath, haskell98, time

executable:     llog
main-is:        Main.hs
hs-source-dirs: src
